--- a/src/components/Navbar2/navbar2.css
+++ b/src/components/Navbar2/navbar2.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 40px;
+  padding: 0 40px 0 25px;
   position: fixed;
   width: 100%;
   z-index: 1000;
