--- a/src/components/Proyectos/modal.css
+++ b/src/components/Proyectos/modal.css
@@ -20,7 +20,7 @@
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   padding: 20px;
   border-radius: 8px;
-  max-width: 90%;
+  max-width: 100%;
   max-height: 90vh;
   display: flex;
   flex-direction: column;
@@ -47,7 +47,7 @@
   background: transparent;
   border: none;
   font-size: 2rem;
-  font-weight: bold;
+  font-weight: 400;
   color: #fff;
   cursor: pointer;
   transition: transform 0.2s ease;
